# ES-miniproject

./: .gitignore  layer_1_weights.txt  layer_2_weights.txt  layer_3_weights.txt
src/dma_test/: CMakeLists.txt  package.xml
src/dma_test/dma_dir/: CMakeLists.txt  dma.cpp  dma.hpp
src/dma_test/dma_dir/drivers/: xnn_inference_hw.h
src/dma_test/lib/ReservedMemory-LKM-and-UserSpaceAPI/: reserved_mem.hpp
src/dma_test/src/: dma_node.cpp  dma_node.hpp  test.cpp
src/dma_test/src/drivers/: CMakeLists.txt  xnn_inference.h
testIP/: CMakeLists.txt  main.cpp
testIP/dma_dir/drivers/: CMakeLists.txt  xnn_inference.c
